# Rakkib

./: .gitignore  AGENTS.md  AGENT_PROTOCOL.md  CLAUDE.md  DRY_RUN_REPORT.md  Fixv0.1.md  LICENSE  PLAN.md  README.md  WebUI.md  authentikPasswordIssue.md  batch1.md  batchx.md  cloudflareFIX.md  install.sh  manifest  pyplan.md  pyproject.toml  pyqr.md  refactorPlan.md  registry.yaml  v1.1-tool-expansion.md
.beads/: config.yaml  export-state.json  issues.jsonl  last-touched  metadata.json
Services/: ai.md  automation-builders.md  books-reading.md  crypto.md  dashboards.md  dns-network.md  documents-knowledge.md  downloads-media-acquisition.md  file-sync-share.md  finance.md  gaming.md  git-devops.md  home-automation.md  media-servers.md  message-transport.md  monitoring.md  office-collaboration.md  photo-video.md  publishing-social.md  remote-access.md  storage-data.md
VErgo/: ClaudePlan.md  CodexPlan.md  README.md  aerospace.sh  terminal.sh
docs/: REFERENCE_SERVER.md  RefactorPlan.md  installshim.md
lib/: placeholders.md  validation.md
questions/: 01-platform.md  02-identity.md  03-services.md  04-cloudflare.md  05-secrets.md  06-confirm.md
scripts/: fayaasrv-root-helper  install-privileged-helper
services/: AGENTS.md  batchoneplan.md  rules.md
steps/: 00-prereqs.md  10-layout.md  20-network.md  30-caddy.md  40-cloudflare.md  50-postgres.md  60-services.md  70-host-agents.md  80-backups.md  85-health-crons.md  90-verify.md
tasks/: lessons.md  todo.md
tests/: __init__.py  test_agent_handoff.py  test_cli.py  test_docker.py  test_doctor.py  test_render.py  (+17 more)
(+248 files in other folders)
