[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rakkib"
version = "2.0.0a0"
description = "Rakkib v2 — wizard-driven server bootstrap"
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0",
  "rich>=13.0",
  "jinja2>=3.1",
]

[project.scripts]
rakkib = "rakkib.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
